@@ -17,6 +17,8 @@
 	driver now returns the reason string provided by OpenSSL. Until a real
 	verify_callback is made, any certificate is accepted.
 
+	* src/core/exmpp_sup.erl: Start exmpp_tls.
+
 2008-05-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* doc/Makefile.am: Fixed distributed files list.
